--- a/config-ASSET-msci_world_index.json
+++ b/config-ASSET-msci_world_index.json
@@ -3,6 +3,10 @@
         "NAME": "MSCI WORLD",
         "SYMBOLS": [
             {
+                "NAME": "ComStage MSCI World ETF",
+                "SYMBOL": "X010.DE"
+            },
+            {
                 "NAME": "APPLE",
                 "SYMBOL": "AAPL"
             },
